--- a/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
@@ -26,9 +26,9 @@
             <GroupBox Header="Location">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="X:"/>
-                    <local:UpDownTextBox x:Name="LocationXTextBox" IsMinusAllowed="True" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="LocationXTextBox" ValueMinLimit="-1000" ValueChanged="TextBox_ValueChanged"/>
                     <Label Content="Y:"/>
-                    <local:UpDownTextBox x:Name="LocationYTextBox" IsMinusAllowed="True" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="LocationYTextBox" ValueMinLimit="-1000" ValueChanged="TextBox_ValueChanged"/>
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Direction">
@@ -40,7 +40,7 @@
             <GroupBox Header="Font">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Font Size:"/>
-                    <local:UpDownTextBox x:Name="FontSizeTextBox" IsZeroAllowed="False" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="FontSizeTextBox" ValueMinLimit="1" ValueChanged="TextBox_ValueChanged"/>
                     <Label Content="Font:"/>
                     <ComboBox x:Name="FontFamilyComboBox" Width="300" VerticalContentAlignment="Center" SelectedValuePath="Text" SelectionChanged="ComboBox_SelectionChanged"/>
                     <CheckBox x:Name="BoldCheckBox" Content="Bold" VerticalAlignment="Center" Checked="CheckBox_CheckChanged" Unchecked="CheckBox_CheckChanged"/>
@@ -50,9 +50,9 @@
             <GroupBox Header="Margin">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Character Margin:"/>
-                    <local:UpDownTextBox x:Name="CharacterMarginTextBox" IsMinusAllowed="True" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="CharacterMarginTextBox" ValueMinLimit="-1000" ValueChanged="TextBox_ValueChanged"/>
                     <Label Content="Line Margin:"/>
-                    <local:UpDownTextBox x:Name="LineMarginTextBox" IsMinusAllowed="True" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="LineMarginTextBox" ValueMinLimit="-1000" ValueChanged="TextBox_ValueChanged"/>
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Fore">
@@ -64,7 +64,7 @@
             <GroupBox Header="Border">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Border Thickness:"/>
-                    <local:UpDownTextBox x:Name="BorderThicknessTextBox" IsMinusAllowed="False" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="BorderThicknessTextBox" ValueMinLimit="0" ValueChanged="TextBox_ValueChanged"/>
                     <Label Content="Border Color:"/>
                     <Button Style="{DynamicResource ColorButtonStyle}" x:Name="BorderColorButton" Width="100" Height="28" Background="Black" BorderThickness="1" BorderBrush="Black" Click="BorderColorButton_Click"/>
                 </StackPanel>
@@ -75,7 +75,7 @@
                     <Label Content="Backgournd Box Color:"/>
                     <Button Style="{DynamicResource ColorButtonStyle}" x:Name="BackgroundColorButton" Width="100" Height="28" Background="Black" BorderThickness="1" BorderBrush="Black" Click="BackgroundColorButton_Click"/>
                     <Label Content="Backgournd Box Padding:"/>
-                    <local:UpDownTextBox x:Name="BackgroundBoxPaddingTextBox" IsMinusAllowed="False" ValueChanged="TextBox_ValueChanged"/>
+                    <local:UpDownTextBox x:Name="BackgroundBoxPaddingTextBox" ValueMinLimit="0" ValueChanged="TextBox_ValueChanged"/>
 
                 </StackPanel>
             </GroupBox>
