--- a/MojiCollaTool/MojiCollaTool/MainWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MainWindow.xaml
@@ -16,15 +16,40 @@
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-            <Button x:Name="LoadImageButton" Content="Load Image" Click="LoadImageButton_Click"/>
-            <Button x:Name="LoadProjectButton" Content="Load Project" Click="LoadProjectButton_Click"/>
-            <Button x:Name="SaveProjectButton" Content="Save Project" Click="SaveProjectButton_Click"/>
-            <Button x:Name="OutputImageButton" Content="Output Image" Click="OutputImageButton_Click"/>
-            <Label Content="Scaling:"/>
-            <local:UpDownTextBox x:Name="ScalingTextBox" ValueMinLimit="10" Step="10" ValueChanged="ScalingTextBox_ValueChanged"/>
-            <Label Content="%"/>
+            <Button x:Name="LoadImageButton" Margin="5" Click="LoadImageButton_Click">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Image Source="/Images/image.png" Margin="0"/>
+                    <TextBlock Text="画像をロードする" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Button x:Name="LoadProjectButton" Margin="5" Click="LoadProjectButton_Click">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Image Source="/Images/folder.png" Margin="5"/>
+                    <TextBlock Text="プロジェクトをロードする" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Button x:Name="SaveProjectButton" Margin="5" Click="SaveProjectButton_Click">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Image Source="/Images/save.png" Margin="5"/>
+                    <TextBlock Text="プロジェクトを保存する" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Button x:Name="OutputImageButton" Margin="5" Click="OutputImageButton_Click">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Image Source="/Images/mojiimage.png" Margin="5"/>
+                    <TextBlock Text="文字コラ画像を出力する" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Label Content="拡大・縮小:" VerticalAlignment="Center"/>
+            <local:UpDownTextBox x:Name="ScalingTextBox" ValueMinLimit="10" Step="10" Margin="0, 5" ValueChanged="ScalingTextBox_ValueChanged"/>
+            <Label Content="%" VerticalAlignment="Center"/>
         </StackPanel>
-        <Button x:Name="AddTextButton" Grid.Row="0" Grid.Column="1" Content="Add Text" Click="AddTextButton_Click"/>
+        <Button x:Name="AddTextButton" Grid.Row="0" Grid.Column="1" Margin="5" Click="AddTextButton_Click">
+            <StackPanel Orientation="Horizontal" Margin="5">
+                <Image Source="/Images/moji.png" Margin="5"/>
+                <TextBlock Text="文字を追加する" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
         <Grid x:Name="CanvasGrid" Grid.Row="1" Grid.Column="0" Background="Gray" PreviewMouseWheel="CanvasGrid_PreviewMouseWheel">
             <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
                 <Canvas x:Name="MainCanvas" Background="Gray" Grid.Column="0">
