--- a/MojiCollaTool/MojiCollaTool/UpDownTextBox.xaml
+++ b/MojiCollaTool/MojiCollaTool/UpDownTextBox.xaml
@@ -4,16 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MojiCollaTool"
-             mc:Ignorable="d"
-             d:DesignHeight="28" d:DesignWidth="106">
+             mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <RepeatButton x:Name="DownButton" Content="▼" Width="28" FontSize="12" Grid.Column="0" Click="DownButton_Click"/>
-        <TextBox x:Name="ValueTextBox" Text="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="50" Grid.Column="1" TextChanged="ValueTextBox_TextChanged" PreviewKeyDown="ValueTextBox_PreviewKeyDown"/>
-        <RepeatButton x:Name="UpButton" Content="▲" Width="28" FontSize="12" Grid.Column="2" Click="UpButton_Click"/>
+        <RepeatButton x:Name="DownButton" Content="▼" MinWidth="28" FontSize="12" Grid.Column="0" Click="DownButton_Click"/>
+        <TextBox x:Name="ValueTextBox" Text="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" MinWidth="50" Grid.Column="1" TextChanged="ValueTextBox_TextChanged" PreviewKeyDown="ValueTextBox_PreviewKeyDown"/>
+        <RepeatButton x:Name="UpButton" Content="▲" MinWidth="28" FontSize="12" Grid.Column="2" Click="UpButton_Click"/>
     </Grid>
 </UserControl>
