--- a/MojiCollaTool/MojiCollaTool/UpDownTextBox.xaml
+++ b/MojiCollaTool/MojiCollaTool/UpDownTextBox.xaml
@@ -11,8 +11,8 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <RepeatButton x:Name="DownButton" Content="▼" MinWidth="28" FontSize="12" Grid.Column="0" Click="DownButton_Click"/>
-        <TextBox x:Name="ValueTextBox" Text="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" MinWidth="50" Grid.Column="1" TextChanged="ValueTextBox_TextChanged" PreviewKeyDown="ValueTextBox_PreviewKeyDown"/>
-        <RepeatButton x:Name="UpButton" Content="▲" MinWidth="28" FontSize="12" Grid.Column="2" Click="UpButton_Click"/>
+        <RepeatButton x:Name="DownButton" Content="▼" MinWidth="28" FontSize="12" Grid.Column="0" Click="DownButton_Click" PreviewMouseWheel="Common_PreviewMouseWheel"/>
+        <TextBox x:Name="ValueTextBox" Text="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" MinWidth="50" Grid.Column="1" TextChanged="ValueTextBox_TextChanged" PreviewKeyDown="ValueTextBox_PreviewKeyDown" PreviewMouseWheel="Common_PreviewMouseWheel"/>
+        <RepeatButton x:Name="UpButton" Content="▲" MinWidth="28" FontSize="12" Grid.Column="2" Click="UpButton_Click" PreviewMouseWheel="Common_PreviewMouseWheel"/>
     </Grid>
 </UserControl>
